--- a/testCases/generador/experimentos.ipynb
+++ b/testCases/generador/experimentos.ipynb
@@ -93,6 +93,12 @@
     "for n in range(0, dfUniforme.shape[0]):\n",
     "    fila_n = dfUniforme.iloc[n];\n",
     "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
+    "for n in range(0, dfMuchos.shape[0]):\n",
+    "    fila_n = dfMuchos.iloc[n];\n",
+    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
+    "for n in range(0, dfPocos.shape[0]):\n",
+    "    fila_n = dfPocos.iloc[n];\n",
+    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
     "    \n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
     "    fila_n = dfFullRandom.iloc[n];\n",
@@ -103,6 +109,12 @@
     "for n in range(0, dfUniforme.shape[0]):\n",
     "    fila_n = dfUniforme.iloc[n];\n",
     "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
+    "for n in range(0, dfMuchos.shape[0]):\n",
+    "    fila_n = dfMuchos.iloc[n];\n",
+    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
+    "for n in range(0, dfPocos.shape[0]):\n",
+    "    fila_n = dfPocos.iloc[n];\n",
+    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
     "    \n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
     "    fila_n = dfFullRandom.iloc[n];\n",
@@ -113,6 +125,13 @@
     "for n in range(0, dfUniforme.shape[0]):\n",
     "    fila_n = dfUniforme.iloc[n];\n",
     "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "for n in range(0, dfMuchos.shape[0]):\n",
+    "    fila_n = dfMuchos.iloc[n];\n",
+    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "for n in range(0, dfPocos.shape[0]):\n",
+    "    fila_n = dfPocos.iloc[n];\n",
+    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "        \n",
     "\n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
     "    fila_n = dfFullRandom.iloc[n];\n",
@@ -202,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
