--- a/testCases/generador/experimentos.ipynb
+++ b/testCases/generador/experimentos.ipynb
@@ -133,13 +133,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Experimento: 1505/1716'"
+       "'Experimento: 1716/1716'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Corriendo instancias/pocos/n15000_0.in con DP.'"
       ]
      },
      "metadata": {},
