--- a/testCases/generador/experimentos.ipynb
+++ b/testCases/generador/experimentos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
     "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfPocos.shape[0]):\n",
     "    fila_n = dfPocos.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
+    "    experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
     "    \n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
     "    fila_n = dfFullRandom.iloc[n];\n",
@@ -158,26 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "'Experimento: 2008/2008'"
-      ]
+      "text/plain": "'Experimento: 2024/2024'"
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     },
     {
+     "output_type": "display_data",
      "data": {
-      "text/plain": [
-       "'Corriendo instancias/pocos/n15000_0.in con DP.'"
-      ]
+      "text/plain": "'Corriendo instancias/pocos/n15000_0.in con DP.'"
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     }
    ],
    "source": [
