--- a/testCases/generador/experimentos.ipynb
+++ b/testCases/generador/experimentos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "experimentos = [];\n",
     "\n",
     "maxNFB = 30\n",
-    "maxNBT = 30\n",
+    "maxNBT = 100\n",
     "\n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
     "    fila_n = dfFullRandom.iloc[n];\n",
@@ -101,42 +101,42 @@
     "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfMuchos.shape[0]):\n",
     "    fila_n = dfMuchos.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNBT):experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfPocos.shape[0]):\n",
     "    fila_n = dfPocos.iloc[n];\n",
     "    experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT\", fila_n[\"archivo\"]]);\n",
     "    \n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
     "    fila_n = dfFullRandom.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfUniformeR.shape[0]):\n",
     "    fila_n = dfUniformeR.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfUniforme.shape[0]):\n",
     "    fila_n = dfUniforme.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfMuchos.shape[0]):\n",
     "    fila_n = dfMuchos.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfPocos.shape[0]):\n",
     "    fila_n = dfPocos.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-O\", fila_n[\"archivo\"]]);\n",
     "    \n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
     "    fila_n = dfFullRandom.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfUniformeR.shape[0]):\n",
     "    fila_n = dfUniformeR.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfUniforme.shape[0]):\n",
     "    fila_n = dfUniforme.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfMuchos.shape[0]):\n",
     "    fila_n = dfMuchos.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
     "for n in range(0, dfPocos.shape[0]):\n",
     "    fila_n = dfPocos.iloc[n];\n",
-    "    if(fila_n[\"n\"] < maxNBT): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
+    "    if(fila_n[\"n\"] < maxNFB): experimentos.append([fila_n[\"dataset\"], fila_n[\"n\"], fila_n[\"W\"], \"BT-F\", fila_n[\"archivo\"]]);\n",
     "        \n",
     "\n",
     "for n in range(0, dfFullRandom.shape[0]):\n",
@@ -158,13 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "'Experimento: 2024/2024'"
+      "text/plain": "'Experimento: 2051/2051'"
      },
      "metadata": {}
     },
